--- a/src/style.css
+++ b/src/style.css
@@ -1,27 +1,49 @@
 
+:root {
+    --veryDarkGrey: rgb(129, 123, 123); 
+}
 
 body, html {
     margin: 0px;
     padding: 0px;
-    background-color: darkgrey;
     background-image: url("./images/metal.jpg");
+    min-height: 100vh;
+
+    display: flex;
+    flex-direction: column;
 }
 
 footer {
     margin: 0px;
     width: 100%;
     height: 10vh;
-    background-color: rgb(129, 123, 123);
+    background-color: var(--veryDarkGrey);
     display: flex;
     justify-content: center;
     align-items: center;
+
+    clear: both;
+    margin-top: auto;
+}
+
+h1 {
+    text-align: center;
+    background-color: darkgreen;
+    border: 5px solid darkred;
+    color: white;
+}
+
+h2 {
+    text-align: center;
+    background-color: lightblue;
+    border: 5px solid darkred;
 }
 
 header {
     margin: 0px;
     width: 100%;
     height: 10vh;
-    background-color: rgb(129, 123, 123);
+    background-color: var(--veryDarkGrey);
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
@@ -36,10 +58,49 @@ header button:hover {
     background-color: white;
 }
 
-main {
-    
-    margin: 5vh auto;
-    width: 50vw;
-    height: 100vh;
-    background-image: url("./images/wood.jpg");
+header button:active {
+    background-color: lightgrey;
 }
+
+img {
+    display: block;
+    margin: 20px auto;
+    max-width: 70%;
+    height: auto;
+    width: auto;
+}
+
+main {
+    margin: 5vh auto;
+    padding: 5vh 5vw;
+    width: 50vw;
+    background-image: url("./images/wood.jpg");
+    border-radius: 10%;
+}
+
+section {
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    padding: 3vh 3vw;
+    border-radius: 10%;
+    box-shadow: 10px 8px 10px #888888;
+    background-color: lightslategrey;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+table {
+    background-color: darkred;
+    color: lightgrey;
+    border-radius: 10%;
+    padding: 10px;
+}
+
+td {
+    padding: 10px;
+    border-bottom: 2px dashed black;
+}
+
